#2 Added ste to deploy to AWS

--- a/.shippable.yml
+++ b/.shippable.yml
@@ -31,6 +31,8 @@ build:
     - docker push nrgi/jade-revenues:$BRANCH
     - docker push nrgi/jade-revenues:$BRANCH.$COMMIT
 
+    # Trigger deploy through building a repo with deploy configuration
+    - ./shippable-deploy.sh
 integrations:
   hub:
     - integrationName: nrgiDockerHub
