#2 Changed path in nginx config from company-networks to revenues-explorer

--- a/docker/nginx_config.conf
+++ b/docker/nginx_config.conf
@@ -6,7 +6,7 @@ http {
         listen 80;
         server_name _;
 
-        location /tools/company-networks {
+        location /tools/revenues-explorer {
             autoindex         off;
             alias /src/revenues-test/;
            }
