--- a/docker/nginx_config.conf
+++ b/docker/nginx_config.conf
@@ -8,7 +8,7 @@ http {
 
         location /tools/revenues-explorer {
             autoindex         off;
-            alias /src/revenues-test/;
+            alias /src/revenues-test;
            }
         }
 }
